<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--ToolBar-->
    <include
        android:id="@+id/mainToolbar"
        layout="@layout/toolbar" />
    <!--Content-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--ทำให้หน้าจอเลื่อนได้ -->
        <LinearLayout
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--Name-->
            <EditText
                android:inputType="text"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <!--User-->
            <EditText
                android:inputType="text"
                android:hint="@string/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <!--Password-->
            <EditText
                android:inputType="text"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <!--Division-->
            <TextView
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="@dimen/h1"
                android:text="@string/division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--Gender-->
            <TextView
                android:text="@string/gender"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="@dimen/h1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioGroup
                android:padding="@dimen/padding"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--Male-->
                <RadioButton
                    android:checked="true"
                    android:text="@string/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <!--Female-->
                <RadioButton
                    android:layout_marginLeft="@dimen/margin"
                    android:text="@string/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </LinearLayout>

    </ScrollView>
</LinearLayout>